--- a/src/components/pages/Blog/blogStyle.css
+++ b/src/components/pages/Blog/blogStyle.css
@@ -50,3 +50,10 @@
   /* text-shadow: 1px 1.5px rgba(0, 0, 0, 0.2); */
   box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.2), 0 5px 20px 0 rgba(0, 0, 0, 0.2);
 }
+
+.textWhiteHover {
+  background-color: white;
+  opacity: 0.9;
+  margin: 20rem 2rem 1rem 2rem ;
+  border-radius: 1rem;
+}
